--- a/dice.css
+++ b/dice.css
@@ -7,9 +7,17 @@ body{
     color: black;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 .dice{
     display: grid;
     grid-template-columns: 1fr 1fr;
-
+}
+.buttonGrid{
+    display:grid;
+    grid-template-columns:1fr 1fr 1fr;
+    width: 100%;
+}
+.diceRoll{
+    width: 100%;
 }
