--- a/dice.css
+++ b/dice.css
@@ -17,7 +17,34 @@ body{
     display:grid;
     grid-template-columns:1fr 1fr 1fr;
     width: 100%;
+    height: 100%;
 }
 .diceRoll{
     width: 100%;
-}
+    grid-column: 2;
+    height: 15vmin;
+
+
+        border-radius: 20px;
+        color: #F40009;
+        font-family: Arial;
+        font-size: 40px;
+        font-weight: 100;
+        background-color: #000000;
+        box-shadow: 1px 1px 20px 0 #A90404;
+        text-shadow: 1px 1px 20px #000000;
+        border: solid #6F0909 1px;
+        text-decoration: none;
+        display: inline-block;
+        cursor: pointer;
+        text-align: center;
+     }
+     
+     .diceRoll:hover {
+        border: solid #000000 1px;
+        background: #700307;
+        background-image: -webkit-linear-gradient(top, #700307, #000000);
+
+        border-radius: 20px;
+        text-decoration: none;
+     }
